--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
+    "jose": "^4.14.6",
     "nanostores": "^0.9.3",
     "next": "13.4.19",
     "postcss": "8.4.29",
