--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "jose": "^4.14.6",
+    "nanoid": "^5.0.1",
     "nanostores": "^0.9.3",
     "next": "13.4.19",
     "postcss": "8.4.29",
