add avatar, room actions; redo the logic

--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "dependencies": {
     "@anycable/core": "^0.7.6",
     "@anycable/web": "^0.7.2",
+    "@headlessui/react": "^1.7.17",
     "@nanostores/react": "^0.7.1",
+    "@types/md5": "^2.3.2",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "jose": "^4.14.6",
+    "md5": "^2.3.0",
     "nanoid": "^5.0.1",
     "nanostores": "^0.9.3",
-    "next": "13.4.19",
+    "next": "13.5.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
