--- a/fly.toml.example
+++ b/fly.toml.example
@@ -8,23 +8,10 @@ processes = []
 
 [env]
   PORT = "8080"
-  ANYCABLE_METRICS_HTTP = "/metrics"
-  ANYCABLE_METRICS_PORT = "9091"
-  ANYCABLE_BROADCAST_ADAPTER = "http"
-  ANYCABLE_HTTP_BROADCAST_PORT = "8080"
+  ANYCABLE_PRESETS = "fly,broker"
   # ANYCABLE_HTTP_BROADCAST_SECRET = "" # set via secrets
-  ANYCABLE_BROKER = "memory"
-  ANYCABLE_RPC_IMPL = "http"
   # ANYCABLE_RPC_HOST = "" # set via secrets
-  ANYCABLE_DEBUG = "true"
-
-[metrics]
-  port = 9091
-  path = "/metrics"
-
-[experimental]
-  allowed_public_ports = []
-  auto_rollback = true
+  # ANYCABLE_DEBUG = "true" # uncomment to enable debug logging
 
 [[services]]
   http_checks = []
@@ -33,8 +20,8 @@ processes = []
   protocol = "tcp"
   script_checks = []
   [services.concurrency]
-    hard_limit = 5000
-    soft_limit = 5000
+    hard_limit = 10000
+    soft_limit = 10000
     type = "connections"
 
   [[services.ports]]
