* install anycable-go via npm

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "anycable-go": "anycable-go --broadcast_adapter=http --presets=broker --rpc_impl=http --rpc_host=http://localhost:3000/api/anycable"
   },
   "dependencies": {
+    "@anycable/anycable-go": "^1.4.6",
     "@anycable/core": "^0.7.8",
-    "@anycable/serverless-js": "^0.0.3",
+    "@anycable/serverless-js": "^0.1.0",
     "@anycable/web": "^0.7.3",
     "@headlessui/react": "^1.7.17",
     "@nanostores/react": "^0.7.1",
