--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ ANYCABLE_RPC_HOST=http://localhost:3000/api/anycable
 ANYCABLE_HTTP_BROADCAST_URL=http://localhost:8090/_broadcast
 ANYCABLE_HTTP_BROADCAST_SECRET=secr3t
 ANYCABLE_JWT_ID_KEY=jt1
+FIREWORKS_API_KEY=some-key
