--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"]
+  "plugins": ["perfectionist"],
+  "rules": {
+    "perfectionist/sort-classes": 0,
+    "perfectionist/sort-jsx-props": 0,
+    "perfectionist/sort-object-types": 0,
+    "perfectionist/sort-objects": 0,
+    "perfectionist/sort-interfaces": 0
+  },
+  "extends": ["next/core-web-vitals","plugin:perfectionist/recommended-natural", "plugin:prettier/recommended"]
 }
