--- a/package.json
+++ b/package.json
@@ -10,35 +10,37 @@
     "anycable-go": "anycable-go --broadcast_adapter=http --presets=broker --rpc_impl=http --rpc_host=http://localhost:3000/api/anycable"
   },
   "dependencies": {
-    "@anycable/anycable-go": "^1.4.6",
-    "@anycable/core": "^0.7.8",
+    "@anycable/anycable-go": "^1.4.7",
+    "@anycable/core": "^0.8.3",
     "@anycable/serverless-js": "^0.1.0",
-    "@anycable/web": "^0.7.3",
-    "@headlessui/react": "^1.7.17",
-    "@nanostores/react": "^0.7.1",
-    "@types/md5": "^2.3.2",
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
+    "@anycable/web": "^0.8.0",
+    "@evilmartians/harmony": "^1.2.0",
+    "@headlessui/react": "^1.7.18",
+    "@nanostores/react": "^0.7.2",
+    "@types/md5": "^2.3.5",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.78",
+    "@types/react-dom": "18.2.25",
+    "autoprefixer": "10.4.19",
     "class-variance-authority": "^0.7.0",
-    "jose": "^4.14.6",
+    "jose": "^5.2.4",
     "md5": "^2.3.0",
-    "nanoid": "^5.0.1",
-    "nanostores": "^0.9.3",
-    "next": "13.5.1",
-    "postcss": "8.4.29",
+    "nanoid": "^5.0.7",
+    "nanostores": "^0.10.3",
+    "next": "^14.2.1",
+    "postcss": "8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5"
   },
   "devDependencies": {
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.16",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-perfectionist": "^2.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.13"
   }
 }
