--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@anycable/web": "^0.8.0",
     "@evilmartians/harmony": "^1.2.0",
     "@headlessui/react": "^1.7.18",
+    "@langchain/community": "^0.0.48",
+    "@langchain/core": "0.1.57",
     "@nanostores/react": "^0.7.2",
     "@types/md5": "^2.3.5",
     "@types/node": "20.12.7",
@@ -24,6 +26,7 @@
     "autoprefixer": "10.4.19",
     "class-variance-authority": "^0.7.0",
     "jose": "^5.2.4",
+    "langchain": "^0.1.33",
     "md5": "^2.3.0",
     "nanoid": "^5.0.7",
     "nanostores": "^0.10.3",
@@ -35,12 +38,22 @@
     "typescript": "5.4.5"
   },
   "devDependencies": {
+    "@iconify-json/heroicons": "^1.1.20",
+    "@iconify-json/teenyicons": "^1.1.9",
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-perfectionist": "^2.9.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13"
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "unplugin-icons": "^0.18.5"
+  },
+  "pnpm": {
+    "overrides": {
+      "@langchain/core": "0.1.57"
+    }
   }
 }
