--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@langchain/core": "0.1.57",
     "@nanostores/persistent": "^0.10.1",
     "@nanostores/react": "^0.7.2",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/md5": "^2.3.5",
     "@types/node": "20.12.7",
     "@types/react": "18.2.78",
@@ -28,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "jose": "^5.2.4",
     "langchain": "^0.1.33",
+    "marked": "^12.0.2",
     "md5": "^2.3.0",
     "nanoid": "^5.0.7",
     "nanostores": "^0.10.3",
